# face-recognition

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
documentation/: Implementation Document.md  Specification Document.md  Testing Document.md  User Guide.md  Weekly Report 1.md  Weekly Report 2.md  Weekly Report 3.md  Weekly Report 4.md  Weekly Report 5.md  Weekly Report 6.md  Weekly Report 7.md
src/facerec/: __init__.py  cli.py  data.py  eval.py  knn.py  matrix_ops.py  model_io.py  pca.py  pipeline.py  preprocess.py
src/integration/: cli_flow_test.py
src/tests/: cli_test.py  data_test.py  eval_test.py  knn_test.py  matrix_ops_test.py  model_io_test.py  pca_test.py  pipeline_test.py  preprocess_test.py
